--- a/.devcontainer/supporting_files/configuration/php_xdebug.ini
+++ b/.devcontainer/supporting_files/configuration/php_xdebug.ini
@@ -1,8 +1,8 @@
-#zend_extension=xdebug
-
 [xdebug]
+zend_extension=xdebug
 xdebug.mode=develop,debug
-xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
 xdebug.start_with_request=trigger
+xdebug.discover_client_host=1
+;xdebug.client_host=host.docker.internal
 #xdebug.log=/tmp/xdebug.log
