--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ vendor
 blesta-cnr-registrar-latest.zip
 components/modules/ispapi
 components/modules/module-namesilo
+components/modules/new-cnr
+blesta
